# PTU-AI-POWERED-CHATBOT

./: .gitignore  README.md  add_notices.py  app.py  chat.py  chatbot ui.jfif  data_preprocessing.py  ensemble_model.py  main.py  migrate_db.py  model.py  nltk_utils.py  package-lock.json  pyproject.toml  requirements.txt  run.py  scheduler.py  train.py  website ui.jfif
app/: __init__.py  app_utils.py  auth.py  forms.py  ptu_utils.py  routes.py
app/chatbot/: __init__.py  forms.py  groq_model.py  rag_model.py  routes.py  tfid.py  utils.py  webpage_data.py
app/chatbot/data/: dataset.csv  responses.json
app/static/css/: base.css  chat.css  dashboard.css  footer.css  home.css  login.css  notices.css  profile.css  register.css  suppot_tickets.css
app/static/js/: base.js  chat.js  home.js  profile.js  support_tickets.js
app/templates/: base.html  chat.html  dashboard.html  home.html  login.html  notices.html  profile.html  register.html  support_tickets.html
app/templates/components/: footer.html  navbar.html
chatbot/: app  chatbot.py  ptu_utils.py
chatbot/static/: style  voice-recognition.js
chatbot/templates/: base.html  chat.html  live support.html
database/: __init__.py  models.py
student_portal/: __main__.py  _init_  auth.py  models.py
templates/: base.html  chat.html  dashboard.html  footer.html  login.html  notices.html  register.html
utils/: logger.py  scheduler.py
